amf-cli/shared/src/test/resources/graphql-federation/tck/apis/invalid/key-input-type.report
ModelId: file://amf-cli/shared/src/test/resources/graphql-federation/tck/apis//invalid/key-input-type.graphql
Profile: GraphQL
Conforms: true
Number of results: 0
